--- a/Responsive.html
+++ b/Responsive.html
@@ -11,9 +11,9 @@
     <body>
         <header>
             <ul>
-              <li><a href="#"><i class="fas fa-user-cog"></i>SOPORTE</a></li>
-              <li><a href="#"><i class="fas fa-cart-plus"></i>MIS COMPRAS</a></li>
-              <li class="Cuenta"><a href="#"><i class="far fa-user-circle"></i>MI CUENTA</a>
+              <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i>SOPORTE</a></li>
+              <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i>MIS COMPRAS</a></li>
+              <li class="Menu"><a href="#"><i class="far fa-user-circle"></i>MI CUENTA</a>
                 <ul>
                         <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card"></i>Regístrate</a></li>
                         <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check"></i>Identifícate</a></li>
