header_section-Version3.0

--- a/Responsive.html
+++ b/Responsive.html
@@ -9,19 +9,21 @@
         <link href="css/all.min.css" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <section>
             <ul>
               <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i>SOPORTE</a></li>
               <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i>MIS COMPRAS</a></li>
               <li class="Menu"><a href="#"><i class="far fa-user-circle"></i>MI CUENTA</a>
-                <ul>
-                        <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card"></i>Regístrate</a></li>
-                        <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check"></i>Identifícate</a></li>
-                        <li class="Sub-Menu"><a href="Login.html"><i class="far fa-comments"></i>Mensajes</a></li>
+                <ul class="ul-SubMenu">
+                  <div> 
+                    <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card"></i>Regístrate</a></li>
+                    <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check"></i>Identifícate</a></li>
+                    <li class="Sub-Menu"><a href="Login.html"><i class="far fa-comments"></i>Mensajes</a></li
+                    </div>
                 </ul>
               </li>
             </ul>
-        </header>
+          </section>
         <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
     </body>
 </html>
