Header_section-Version4.0

--- a/Responsive.html
+++ b/Responsive.html
@@ -11,15 +11,13 @@
     <body>
         <section>
             <ul>
-              <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i>SOPORTE</a></li>
-              <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i>MIS COMPRAS</a></li>
-              <li class="Menu"><a href="#"><i class="far fa-user-circle"></i>MI CUENTA</a>
+              <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i></a></li>
+              <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i></a></li>
+              <li class="Menu"><a href="#"><i class="far fa-user-circle"></i></a>
                 <ul class="ul-SubMenu">
-                  <div> 
-                    <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card"></i>Regístrate</a></li>
-                    <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check"></i>Identifícate</a></li>
-                    <li class="Sub-Menu"><a href="Login.html"><i class="far fa-comments"></i>Mensajes</a></li
-                    </div>
+                    <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card">&nbsp; Regístrate</i></a></li>
+                    <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check">&nbsp; Identifícate</i></a></li>
+                    <li class="Sub-Menu"><a href="Login.html"><i class="far fa-comments">&nbsp; Mensajes</i></a></li
                 </ul>
               </li>
             </ul>
