Nav_Final-Version6.0

--- a/Responsive.html
+++ b/Responsive.html
@@ -10,18 +10,32 @@
     </head>
     <body>
         <section>
-            <ul>
+              <nav>
+                <ul>
+                    <li class="Soporte" id="Opcion-1"><a href=""><i class="fas fa-user-cog"></i></a></li>
+                    <li class="Carrito" id="Opcion-1"><a href=""><i class="fas fa-cart-plus"></i></a></li>
+                    <li class="Cuenta"  id="Opcion-1"><a href=""><i class="far fa-user-circle"></i></a>
+                        <ul>
+                          <a href=""><li class="Registrate"   id="Opcion-2"><i class="far fa-address-card">&nbsp; Regístrate</i></li></a>
+                          <a href=""><li class="Identificate" id="Opcion-2"><i class="fas fa-user-check">&nbsp; Identifícate</i></li></a>
+                          <a href=""><li class="Mensaje"  id="Opcion-2"><i class="far fa-comments">&nbsp; Mensajes</i></li></a>
+                        </ul>
+                    </li>
+                </ul>
+              </nav>
+          </section>
+<!--
               <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i></a></li>
               <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i></a></li>
-              <li class="Menu"><a href="#"><i class="far fa-user-circle"></i></a>
+              <li class="Menu" id="Desplegable-Menu"><a href="#"><i class="far fa-user-circle"></i></a>
                 <ul class="ul-SubMenu">
                     <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card">&nbsp; Regístrate</i></a></li>
                     <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check">&nbsp; Identifícate</i></a></li>
-                    <li class="Sub-Menu"><a href="Login.html"><i class="far fa-comments">&nbsp; Mensajes</i></a></li
+                    <li class="Sub-Menu" ><a href="Login.html"><i class="far fa-comments">&nbsp; Mensajes</i></a></li
                 </ul>
               </li>
             </ul>
           </section>
-        <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+        <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>-->
     </body>
 </html>
