--- a/Responsive.html
+++ b/Responsive.html
@@ -7,35 +7,36 @@
         <link rel="icon" href="img/Logo-Perfume.png">
         <link href="css/1.css" rel="stylesheet">
         <link href="css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     </head>
     <body>
-        <section>
-              <nav>
-                <ul>
-                    <li class="Soporte" id="Opcion-1"><a href=""><i class="fas fa-user-cog"></i></a></li>
-                    <li class="Carrito" id="Opcion-1"><a href=""><i class="fas fa-cart-plus"></i></a></li>
-                    <li class="Cuenta"  id="Opcion-1"><a href=""><i class="far fa-user-circle"></i></a>
-                        <ul>
-                          <a href=""><li class="Registrate"   id="Opcion-2"><i class="far fa-address-card">&nbsp; Regístrate</i></li></a>
-                          <a href=""><li class="Identificate" id="Opcion-2"><i class="fas fa-user-check">&nbsp; Identifícate</i></li></a>
-                          <a href=""><li class="Mensaje"  id="Opcion-2"><i class="far fa-comments">&nbsp; Mensajes</i></li></a>
-                        </ul>
-                    </li>
-                </ul>
-              </nav>
-          </section>
-<!--
-              <li class="Menu"><a href="#"><i class="fas fa-user-cog"></i></a></li>
-              <li class="Menu"><a href="#"><i class="fas fa-cart-plus"></i></a></li>
-              <li class="Menu" id="Desplegable-Menu"><a href="#"><i class="far fa-user-circle"></i></a>
-                <ul class="ul-SubMenu">
-                    <li class="Sub-Menu"><a href="Registrate.html"><i class="far fa-address-card">&nbsp; Regístrate</i></a></li>
-                    <li class="Sub-Menu"><a href="Login.html"><i class="fas fa-user-check">&nbsp; Identifícate</i></a></li>
-                    <li class="Sub-Menu" ><a href="Login.html"><i class="far fa-comments">&nbsp; Mensajes</i></a></li
-                </ul>
-              </li>
-            </ul>
-          </section>
-        <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>-->
+        <div class="container">
+             <header>
+                  <h1 class="font-effect-outline">“EL PERFUME VIVE EN EL TIEMPO; TIENE SU JUVENTUD, SU MADUREZ Y SU VEJEZ”</h1>
+                  <div class="Presentacion"></div>
+                  <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+                  <div class="Div-Buscar">
+                    <input class="Buscar" type="text" placeholder=" Buscar Productos">
+                    <i id="Icon-Buscar" class="fas fa-search"></i>
+                  </div>
+              </header>
+          <div>
+
+
+
+                  
+              </header>
+          <!--
+          <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+          <header>
+            <nav class="Nav-Menu">
+              <ul>
+                <li> <a href=""><strong>INICIO</strong></a></li>
+                <li> <a href=""><strong>PATROCINADORES</strong></a></li>
+                <li> <a href=""><strong>CONTACTOS</strong></a></li>
+              </ul>
+            </nav>
+          </header>
+          -->
     </body>
 </html>
