--- a/Responsive.html
+++ b/Responsive.html
@@ -10,33 +10,34 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     </head>
     <body>
-        <div class="container">
-             <header>
-                  <h1 class="font-effect-outline">“EL PERFUME VIVE EN EL TIEMPO; TIENE SU JUVENTUD, SU MADUREZ Y SU VEJEZ”</h1>
-                  <div class="Presentacion"></div>
-                  <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-                  <div class="Div-Buscar">
-                    <input class="Buscar" type="text" placeholder=" Buscar Productos">
-                    <i id="Icon-Buscar" class="fas fa-search"></i>
-                  </div>
-              </header>
-          <div>
+        <header class="Publicidad">
+          <h1 id="Titulo" class="font-effect-outline" style="color:chocolate;">EL RECUERDO ES EL PERFUME DEL ALMA</h1>
+          <nav class="Nav-Opciones">
+             <ul>
+               <li><a href=""></a><i class="fas fa-user-cog"></i></li>
+               <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
+               <li><a href=""></a><i class="far fa-user-circle"></i></li>
+             </ul>
+          </nav>
+        </header>
+          <div class="Presentacion-1">
+            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+            <input class="Buscar" type="text" placeholder=" Buscar Productos">
+          </div>
+          <div class="Presentacion-2">
+            <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
+          </div>
 
-
-
-                  
-              </header>
-          <!--
-          <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-          <header>
-            <nav class="Nav-Menu">
-              <ul>
-                <li> <a href=""><strong>INICIO</strong></a></li>
-                <li> <a href=""><strong>PATROCINADORES</strong></a></li>
-                <li> <a href=""><strong>CONTACTOS</strong></a></li>
-              </ul>
-            </nav>
-          </header>
-          -->
+          <div class="Portada">
+            <div class="Promociones">
+              <h1>
+                El excelente aroma siempre le da un toque lujoso a la personalidad.
+              </h1>
+              <h3>
+                “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
+              </h3>
+            </div>
+            <img src="img/Slider-1.jpg">
+          </div>
     </body>
 </html>
