--- a/Responsive.html
+++ b/Responsive.html
@@ -11,7 +11,6 @@
     </head>
     <body>
         <header class="Publicidad">
-          <h1 id="Titulo" class="font-effect-outline" style="color:chocolate;">EL RECUERDO ES EL PERFUME DEL ALMA</h1>
           <nav class="Nav-Opciones">
              <ul>
                <li><a href=""></a><i class="fas fa-user-cog"></i></li>
@@ -22,22 +21,17 @@
         </header>
           <div class="Presentacion-1">
             <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-            <input class="Buscar" type="text" placeholder=" Buscar Productos">
           </div>
-          <div class="Presentacion-2">
-            <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
-          </div>
-
           <div class="Portada">
-            <div class="Promociones">
-              <h1>
-                El excelente aroma siempre le da un toque lujoso a la personalidad.
-              </h1>
-              <h3>
-                “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
-              </h3>
+              <div class="Portada-Frases">
+                <h1>El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
+                <h3>“El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”</h3>
+              </div>
+              <img src="img/Slider-1.jpg">
             </div>
-            <img src="img/Slider-1.jpg">
-          </div>
+            <div class="Presentacion-2">
+              <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
+              <input class="Buscar" type="text" placeholder=" Buscar Productos">
+            </div>
     </body>
 </html>
