--- a/Responsive.html
+++ b/Responsive.html
@@ -27,7 +27,10 @@
                 <h1>El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
                 <h3>“El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”</h3>
               </div>
-              <img src="img/Slider-1.jpg">
+              <div class="Img-Portada">
+                <img src="img/Slider-1.jpg">
+              </div>
+              
             </div>
             <div class="Presentacion-2">
               <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
