--- a/Responsive.html
+++ b/Responsive.html
@@ -8,6 +8,8 @@
         <link href="css/1.css" rel="stylesheet">
         <link href="css/all.min.css" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="Publicidad">
@@ -21,20 +23,19 @@
         </header>
           <div class="Presentacion-1">
             <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+            <input class="Buscar" type="text" placeholder=" Buscar Productos">
           </div>
-          <div class="Portada">
+            <div class="Portada">
               <div class="Portada-Frases">
-                <h1>El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
-                <h3>“El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”</h3>
+                <h1 id="Letra-1" class="font-effect-outline">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
+                <h3 id="Letra-2" class="font-effect-outline">“El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”</h3>
               </div>
               <div class="Img-Portada">
                 <img src="img/Slider-1.jpg">
               </div>
-              
             </div>
             <div class="Presentacion-2">
-              <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
-              <input class="Buscar" type="text" placeholder=" Buscar Productos">
+              <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
             </div>
     </body>
 </html>
