--- a/Responsive.html
+++ b/Responsive.html
@@ -25,14 +25,12 @@
             <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
             <input class="Buscar" type="text" placeholder=" Buscar Productos">
           </div>
-            <div class="Portada">
-              <div class="Portada-Frases">
-                <h1 id="Letra-1" class="font-effect-outline">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
-                <h3 id="Letra-2" class="font-effect-outline">“El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”</h3>
-              </div>
-              <div class="Img-Portada">
-                <img src="img/Slider-1.jpg">
-              </div>
+            <div class="Portada"> 
+                <h1 id="Letra-1" class="font-effect-outline">El excelente aroma siempre le da un toque lujoso a la personalidad.
+                  <br><br><br><br><br><br><br>
+                  “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
+                </h1>
+                <img class="Portada-Img" src="img/Slider-1.jpg">
             </div>
             <div class="Presentacion-2">
               <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
