Grid_Responsive-Version13

--- a/Responsive.html
+++ b/Responsive.html
@@ -12,8 +12,47 @@
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
     </head>
     <body>
+
+        <div class="grid-container">
+          <div class="Barra-Cuentas">
+              <header class="Opciones-Usuario">
+                <nav class="Nav-Opciones">
+                   <ul>
+                     <li><a href=""></a><i class="fas fa-user-cog"></i></li>
+                     <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
+                     <li><a href=""></a><i class="far fa-user-circle"></i></li>
+                   </ul>
+                </nav>
+              </header>
+          </div>
+          <div class="Busqueda">
+            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+            <div class="Busqueda-Letra">
+              <h1 class="font-effect-outline">“El perfume vive en el tiempo; <br> tiene su juventud, su madurez y su vejez”</h1>
+            </div>
+            <div class="Busqueda-Input">
+              <input class="Input-Buscar" type="text" placeholder=" Buscar Productos">
+            </div>
+          </div>
+        </div>
+        <div class="Portada">
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+      <!--
         <header class="Publicidad">
           <nav class="Nav-Opciones">
+            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
              <ul>
                <li><a href=""></a><i class="fas fa-user-cog"></i></li>
                <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
@@ -22,7 +61,6 @@
           </nav>
         </header>
           <div class="Presentacion-1">
-            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
             <input class="Buscar" type="text" placeholder=" Buscar Productos">
           </div>
             <div class="Portada"> 
@@ -35,5 +73,6 @@
             <div class="Presentacion-2">
               <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
             </div>
+            -->
     </body>
 </html>
