--- a/Responsive.html
+++ b/Responsive.html
@@ -1,78 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Responsive</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img/Logo-Perfume.png">
-        <link href="css/1.css" rel="stylesheet">
-        <link href="css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
-    </head>
-    <body>
 
-        <div class="grid-container">
-          <div class="Barra-Cuentas">
-              <header class="Opciones-Usuario">
-                <nav class="Nav-Opciones">
-                   <ul>
-                     <li><a href=""></a><i class="fas fa-user-cog"></i></li>
-                     <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
-                     <li><a href=""></a><i class="far fa-user-circle"></i></li>
-                   </ul>
-                </nav>
-              </header>
-          </div>
-          <div class="Busqueda">
-            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-            <div class="Busqueda-Letra">
-              <h1 class="font-effect-outline">“El perfume vive en el tiempo; <br> tiene su juventud, su madurez y su vejez”</h1>
-            </div>
-            <div class="Busqueda-Input">
-              <input class="Input-Buscar" type="text" placeholder=" Buscar Productos">
-            </div>
-          </div>
-        </div>
-        <div class="Portada">
+<head>
+  <title>Responsive</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="img/Logo-Perfume.png">
+  <link href="css/1.css" rel="stylesheet">
+  <link href="css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
+</head>
 
-        </div>
+<body>
+  <div class="grid-container">
+    <div class="Barra-Cuentas">
+      <header class="Opciones-Usuario">
+        <nav class="Nav-Opciones">
+          <ul>
+            <li><a href=""></a><i class="fas fa-user-cog"></i></li>
+            <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
+            <li><a href=""></a><i class="far fa-user-circle"></i></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <div>
+      <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+    </div >
+
+  </div>
 
 
+</body>
 
-
-
-
-
-
-
-
-
-      <!--
-        <header class="Publicidad">
-          <nav class="Nav-Opciones">
-            <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-             <ul>
-               <li><a href=""></a><i class="fas fa-user-cog"></i></li>
-               <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
-               <li><a href=""></a><i class="far fa-user-circle"></i></li>
-             </ul>
-          </nav>
-        </header>
-          <div class="Presentacion-1">
-            <input class="Buscar" type="text" placeholder=" Buscar Productos">
-          </div>
-            <div class="Portada"> 
-                <h1 id="Letra-1" class="font-effect-outline">El excelente aroma siempre le da un toque lujoso a la personalidad.
-                  <br><br><br><br><br><br><br>
-                  “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
-                </h1>
-                <img class="Portada-Img" src="img/Slider-1.jpg">
-            </div>
-            <div class="Presentacion-2">
-              <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
-            </div>
-            -->
-    </body>
 </html>
