--- a/Index.html
+++ b/Index.html
@@ -13,11 +13,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <div class="grid-container">
-    <div class="Barra-Cuentas">
-      <header class="Opciones-Usuario">
+  <div class="Div-Principal">
+      <header class="Cabecera">
         <nav class="Nav-Opciones">
           <ul>
             <li><a href=""></a><i class="fas fa-user-cog"></i></li>
@@ -26,14 +24,20 @@
           </ul>
         </nav>
       </header>
-    </div>
-    <div>
       <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-    </div >
+      <div class="Publicidad-1">
+        <h1 class="font-effect-outline" id="Letra-Publicidad">
+          “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
+        </h1>
+        <input class="Buscar" type="text" placeholder=" Buscar Productos">
+      </div>
+        
+
+
+
+
 
   </div>
-ola mundo
-
 </body>
 
 </html>
