--- a/Index.html
+++ b/Index.html
@@ -31,8 +31,12 @@
         </h1>
         <input class="Buscar" type="text" placeholder=" Buscar Productos">
       </div>
-        
-
+      <div class="Publicidad-2">
+        <img class="Portada-Img" src="img/Slider-1.jpg">
+      </div>
+      <div class="Presentacion-2">
+        <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
+      </div>
 
 
 
