--- a/Index.html
+++ b/Index.html
@@ -32,11 +32,12 @@
         <input class="Buscar" type="text" placeholder=" Buscar Productos">
       </div>
       <div class="Publicidad-2">
+        <h1 id="Letra-Pormocion" class="font-effect-outline">
+          El excelente aroma siempre le da un toque lujoso a la personalidad.
+        </h1>
         <img class="Portada-Img" src="img/Slider-1.jpg">
       </div>
-      <div class="Presentacion-2">
-        <h1 class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
-      </div>
+        <h1 id="Promocion_1" class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
 
 
 
