--- a/Index.html
+++ b/Index.html
@@ -18,9 +18,9 @@
       <header class="Cabecera">
         <nav class="Nav-Opciones">
           <ul>
-            <li><a href=""></a><i class="fas fa-user-cog"></i></li>
-            <li><a href=""></a><i class="fas fa-cart-plus"></i></li>
-            <li><a href=""></a><i class="far fa-user-circle"></i></li>
+            <li><a href=""><i class="fas fa-user-cog"></i></a></li>
+            <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
+            <li><a href="Registrate.html"><i class="far fa-user-circle"></i></a></li>
           </ul>
         </nav>
       </header>
