--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="Pagina_Principal">
   <div class="Div-Principal">
       <header class="Cabecera">
         <nav class="Nav-Opciones">
