--- a/Registrate.html
+++ b/Registrate.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
     </head>
-    <body>
+    <body background="img/Fondo_Usuario.jpg">
         <header class="Cabecera">
             <nav class="Nav-Opciones">
               <ul>
@@ -23,15 +23,17 @@
             </nav>
           </header>
           <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-        <form class="Registrate">
-            <fieldset class="Borde-form">
-                <legend><h1>REGÍSTRATE <br> <i class="fas fa-user-plus"></i></h1></legend>
-                <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp  <br> <br>
-                <input class="Input-Registrate" type="text" placeholder="Apellido"> &nbsp <br> <br>
-                <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp
-                <br><br>
-                <input type="submit" value="REGISTRARME" class="Botton-Enviar" />
-              </fieldset> <br>  
-        </form>
+          <div class="Formulario-Principal">
+            <button>Regístrate</button><button>Iniciar Sesión</button>
+            <form class="Registrate">
+              <legend><h1>REGÍSTRATE <br> <i class="fas fa-user-plus"></i></h1></legend>
+              <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp  <br> <br>
+              <input class="Input-Registrate" type="text" placeholder="Apellido"> &nbsp <br> <br>
+              <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp
+              <br><br>
+              <input type="submit" value="Registrarme" class="Botton-Enviar" />
+           <br>  
+      </form>
+          </div>
     </body>
 </html>
