--- a/Registrate.html
+++ b/Registrate.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Responsive</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" href="img/Logo-Perfume.png">
-        <link href="css/1.css" rel="stylesheet">
-        <link href="css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
-    </head>
-    <body background="img/Fondo_Usuario.jpg">
-        <header class="Cabecera">
-            <nav class="Nav-Opciones">
-              <ul>
-                <li><a href=""><i class="fas fa-user-cog"></i></a></li>
-                <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
-                <li><a href="Registrate.html"><i class="far fa-user-circle"></i></a></li>
-              </ul>
-            </nav>
-          </header>
-          <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-          <div class="Formulario-Principal">
-            <button>Regístrate</button><button>Iniciar Sesión</button>
-            <form class="Registrate">
-              <legend><h1>REGÍSTRATE <br> <i class="fas fa-user-plus"></i></h1></legend>
-              <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp  <br> <br>
-              <input class="Input-Registrate" type="text" placeholder="Apellido"> &nbsp <br> <br>
-              <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp
-              <br><br>
-              <input type="submit" value="Registrarme" class="Botton-Enviar" />
-           <br>  
-      </form>
-          </div>
-    </body>
+
+<head>
+  <title>Responsive</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="img/Logo-Perfume.png">
+  <link href="css/1.css" rel="stylesheet">
+  <link href="css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
+</head>
+
+<body background="img/Fondo_Usuario.jpg">
+  <header class="Cabecera">
+    <nav class="Nav-Opciones">
+      <ul>
+        <li><a href=""><i class="fas fa-user-cog"></i></a></li>
+        <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
+        <li><a href="Registrate.html"><i class="far fa-user-circle"></i></a></li>
+      </ul>
+    </nav>
+  </header>
+  <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+  <div class="Formulario-Principal">
+    <button>Regístrate</button><button>Iniciar Sesión</button>
+    <form class="Registrate">
+      <legend>
+        <h1>REGÍSTRATE <br> <i class="fas fa-user-plus"></i></h1>
+      </legend>
+      <input class="Input-Registrate" type="text" placeholder="Nombre">&nbsp <br> <br> <br>
+      <input class="Input-Registrate" type="text" placeholder="Apellido"> &nbsp <br> <br> <br>
+      <input class="Input-Registrate" type="tel" placeholder="Telefono"> &nbsp <br> <br> <br>
+      <input class="Input-Registrate" type="tel" placeholder="Contraseña"> &nbsp
+      <br><br>
+      <input type="submit" value="Registrarme" class="Botton-Enviar" />
+      <br>
+    </form>
+    <form class="Login-P">
+          <h1>Bienvenido a Perfumes <br> <i class="fas fa-users"><br></i></h1>
+          <br> <br>
+          <input id="Input" class="Usuario" type="text" placeholder="Numero de telefono"> <br> <br>
+          <input id="Input" class="Contraseña" type="text" placeholder="Contraseña">
+        </div>
+        <br>
+        <div class="Recordar-C">
+          <h1><a href="">¿PERDISTE TU CONTRASEÑA?</a></h1>
+          <h1><a href="Registrate.html">¿NO TIENES CUENTA? REGISTRASTE</a></h1>
+        </div>
+    </form>
+  </div>
+</body>
+
 </html>
