--- a/Index.html
+++ b/Index.html
@@ -31,17 +31,43 @@
         </h1>
         <input class="Buscar" type="text" placeholder=" Buscar Productos">
       </div>
-      <div class="Publicidad-2">
-        <h1 id="Letra-Pormocion" class="font-effect-outline">
-          El excelente aroma siempre le da un toque lujoso a la personalidad.
-        </h1>
-        <img class="Portada-Img" src="img/Slider-1.jpg">
+      <div class="Div-Slide">
+        <div id="slide">
+          <h1 class="text-slide">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
+          <ul>
+              
+              <li>
+                  <input type="radio" id="boton-1" name="in">
+                  <label for="boton-1"></label>
+                  <img src="img/Img-1.jpg" width="100%" id="foto01">
+              </li>
+              <li>
+                  <input type="radio" id="boton-2" name="in">
+                  <label for="boton-2"></label>
+                  <img src="img/Img-2.jpg" width="100%" id="foto02">
+              </li>
+  
+              <li>
+                  <input type="radio" id="boton-3" name="in">
+                  <label for="boton-3"></label>
+                  <img src="img/Img-3.jpg" width="100%" id="foto03">
+              </li>
+              <li>
+                  <input type="radio" id="boton-4" name="in">
+                  <label for="boton-4"></label>
+                  <img src="img/Img-4.jpg" width="100%" id="foto04">
+              </li>
+              <li>
+                  <input type="radio" id="boton-5" name="in">
+                  <label for="boton-5"></label>
+                  <img src="img/Img-5.jpg" width="100%" id="foto05">
+              </li>
+          </ul>
       </div>
+      </div>
+
+    <br><br>
         <h1 id="Promocion_1" class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
-
-
-
-
   </div>
 </body>
 
