--- a/Index.html
+++ b/Index.html
@@ -34,8 +34,9 @@
       <div class="Div-Slide">
         <div id="slide">
           <h1 class="text-slide">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
+          <h3>Para ver la publicidad dale click aqui </h3>
+          <h3><i class="fas fa-arrow-down"></i></h3>
           <ul>
-              
               <li>
                   <input type="radio" id="boton-1" name="in">
                   <label for="boton-1"></label>
