--- a/Index.html
+++ b/Index.html
@@ -13,62 +13,122 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital@1&display=swap" rel="stylesheet">
 </head>
+
 <body class="Pagina_Principal">
   <div class="Div-Principal">
-      <header class="Cabecera">
-        <nav class="Nav-Opciones">
-          <ul>
-            <li><a href=""><i class="fas fa-user-cog"></i></a></li>
-            <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
-            <li><a href="Registrate.html"><i class="far fa-user-circle"></i></a></li>
-          </ul>
-        </nav>
-      </header>
-      <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
-      <div class="Publicidad-1">
-        <h1 class="font-effect-outline" id="Letra-Publicidad">
-          “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
-        </h1>
-        <input class="Buscar" type="text" placeholder=" Buscar Productos">
-      </div>
-      <div class="Div-Slide">
-        <div id="slide">
-          <h1 class="text-slide">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
-          <h3>Para ver la publicidad dale click aqui </h3>
-          <h3><i class="fas fa-arrow-down"></i></h3>
-          <ul>
-              <li>
-                  <input type="radio" id="boton-1" name="in">
-                  <label for="boton-1"></label>
-                  <img src="img/Img-1.jpg" width="100%" id="foto01">
-              </li>
-              <li>
-                  <input type="radio" id="boton-2" name="in">
-                  <label for="boton-2"></label>
-                  <img src="img/Img-2.jpg" width="100%" id="foto02">
-              </li>
-  
-              <li>
-                  <input type="radio" id="boton-3" name="in">
-                  <label for="boton-3"></label>
-                  <img src="img/Img-3.jpg" width="100%" id="foto03">
-              </li>
-              <li>
-                  <input type="radio" id="boton-4" name="in">
-                  <label for="boton-4"></label>
-                  <img src="img/Img-4.jpg" width="100%" id="foto04">
-              </li>
-              <li>
-                  <input type="radio" id="boton-5" name="in">
-                  <label for="boton-5"></label>
-                  <img src="img/Img-5.jpg" width="100%" id="foto05">
-              </li>
-          </ul>
-      </div>
-      </div>
+    <header class="Cabecera">
+      <nav class="Nav-Opciones">
+        <ul>
+          <li><a href=""><i class="fas fa-user-cog"></i></a></li>
+          <li><a href=""><i class="fas fa-cart-plus"></i></a></li>
+          <li><a href="Registrate.html"><i class="far fa-user-circle"></i></a></li>
+        </ul>
+      </nav>
+    </header>
+    <a href="Index.html"><img class="Img-Logo" src="img/LOGO-NUEVO.PNG"></a>
+    <div class="Publicidad-1">
+      <h1 class="font-effect-outline" id="Letra-Publicidad">
+        “El perfume vive en el tiempo; tiene su juventud, su madurez y su vejez”
+      </h1>
+      <input class="Buscar" type="text" placeholder=" Buscar Productos">
+    </div>
+    <div class="Div-Slide">
+      <div id="slide">
+        <h1 class="text-slide">El excelente aroma siempre le da un toque lujoso a la personalidad.</h1>
+        <h3>Para ver la publicidad dale click aqui </h3>
+        <h3><i class="fas fa-arrow-down"></i></h3>
+        <ul>
+          <li>
+            <input type="radio" id="boton-1" name="in">
+            <label for="boton-1"></label>
+            <img src="img/Img-1.jpg" width="100%" id="foto01">
+          </li>
+          <li>
+            <input type="radio" id="boton-2" name="in">
+            <label for="boton-2"></label>
+            <img src="img/Img-2.jpg" width="100%" id="foto02">
+          </li>
 
+          <li>
+            <input type="radio" id="boton-3" name="in">
+            <label for="boton-3"></label>
+            <img src="img/Img-3.jpg" width="100%" id="foto03">
+          </li>
+          <li>
+            <input type="radio" id="boton-4" name="in">
+            <label for="boton-4"></label>
+            <img src="img/Img-4.jpg" width="100%" id="foto04">
+          </li>
+          <li>
+            <input type="radio" id="boton-5" name="in">
+            <label for="boton-5"></label>
+            <img src="img/Img-5.jpg" width="100%" id="foto05">
+          </li>
+        </ul>
+      </div>
+    </div>
     <br><br>
-        <h1 id="Promocion_1" class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1> 
+    <h1 id="Promocion_1" class="font-effect-outline">¿1era Compra? 20% OFF EXTRA</h1>
+  </div>
+  <div class="Top-Favoritos">
+    <table class="Perfumes-Favoritos">
+      <tr>
+        <td class="Perfumes" id="Perfume_1">
+          <h1 class="Letra-Top">LO + TOP</h1>
+        </td>
+        <td class="Perfumes" id="Perfume_2">
+          <img src="img/Catalogo-1.png" alt=""><br>
+          <h3>
+            ★ ★ ★ ★ ★
+            <br>
+            GIORGIO ARMANI
+          </h3>  
+        </td>
+        <td class="Perfumes" id="Perfume_3">
+          <img src="img/Catalogo-2.png" alt=""><br>
+          <h3>
+            ★ ★ ★ ★ ★
+            <br>
+            ACQUA DI GIO
+          </h3> 
+        </td>
+        <td class="Perfumes" id="Perfume_4">
+          <img src="img/Catalogo-9.png" alt=""><br>
+          <h3>
+            ★ ★ ★ ★ 
+            <br>
+            LANCOME TRESOR
+          </h3> 
+        </td>
+        <td class="Perfumes" id="Perfume_5"> 
+          <img src="img/Catalogo-10.png" alt=""><br>
+          <h3>
+            ★ ★ ★ ★ 
+            <br>
+            LANCOME TRESOR
+          </h3> </td>
+      </tr>
+    </table>
+
+
+
+
+    <!--
+    <h1 class="Letra-Top">LO + TOP</h1>
+    <div class="Top-Perfumes" id="Top-1"> 
+      <img src="img/Catalogo-1.png" alt="">
+      <h3 color="red">★ ★ ★ ★ ★</h3>
+       <h3>GIORGIO ARMANI</h3>
+    </div>
+    <div class="Top-Perfumes" id="Top-2">
+      <img src="img/Catalogo-1.png" alt="">
+      <h3 color="red">★ ★ ★ ★ ★</h3>
+       <h3>GIORGIO ARMANI</h3>
+    </div>
+    -->
+    <div class="Top-Perfumes" id="Top-3"></div>
+    <div class="Top-Perfumes" id="Top-4"></div>
+    <div class="Top-Perfumes" id="Top-5"></div>
   </div>
 </body>
 
