--- a/Index.html
+++ b/Index.html
@@ -109,26 +109,11 @@
           </h3> </td>
       </tr>
     </table>
+  </div>
+  <br>
+  <div class="Categoria">
+    <h1>NUESTROS PERFUMES</h1>
 
-
-
-
-    <!--
-    <h1 class="Letra-Top">LO + TOP</h1>
-    <div class="Top-Perfumes" id="Top-1"> 
-      <img src="img/Catalogo-1.png" alt="">
-      <h3 color="red">★ ★ ★ ★ ★</h3>
-       <h3>GIORGIO ARMANI</h3>
-    </div>
-    <div class="Top-Perfumes" id="Top-2">
-      <img src="img/Catalogo-1.png" alt="">
-      <h3 color="red">★ ★ ★ ★ ★</h3>
-       <h3>GIORGIO ARMANI</h3>
-    </div>
-    -->
-    <div class="Top-Perfumes" id="Top-3"></div>
-    <div class="Top-Perfumes" id="Top-4"></div>
-    <div class="Top-Perfumes" id="Top-5"></div>
   </div>
 </body>
 
