--- a/Index.html
+++ b/Index.html
@@ -113,7 +113,14 @@
   <br>
   <div class="Categoria">
     <h1>NUESTROS PERFUMES</h1>
+    <div class="Formulario-P" id="Opciones-Productos">
+      <div class="Tabs-Usuario" id="Secciones-Productos">
+        <label for="Registrate" id="label-Productos"><h3>SECCIÓN DE CABALLEROS</h3></label>
+        <label for="Login" id="label-Productos"><h3>SECCIÓN DE DAMAS</h3></label>
+      </div>
 
+    </div>
+    </div>
   </div>
 </body>
 
