Tabla-Perfumes-Version34

--- a/Index.html
+++ b/Index.html
@@ -82,7 +82,7 @@
             ★ ★ ★ ★ ★
             <br>
             GIORGIO ARMANI
-          </h3>  
+          </h3>
         </td>
         <td class="Perfumes" id="Perfume_3">
           <img src="img/Catalogo-2.png" alt=""><br>
@@ -90,23 +90,24 @@
             ★ ★ ★ ★ ★
             <br>
             ACQUA DI GIO
-          </h3> 
+          </h3>
         </td>
         <td class="Perfumes" id="Perfume_4">
           <img src="img/Catalogo-9.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★ 
+            ★ ★ ★ ★
             <br>
             LANCOME TRESOR
-          </h3> 
+          </h3>
         </td>
-        <td class="Perfumes" id="Perfume_5"> 
+        <td class="Perfumes" id="Perfume_5">
           <img src="img/Catalogo-10.png" alt=""><br>
           <h3>
-            ★ ★ ★ ★ 
+            ★ ★ ★ ★
             <br>
             LANCOME TRESOR
-          </h3> </td>
+          </h3>
+        </td>
       </tr>
     </table>
   </div>
@@ -115,12 +116,64 @@
     <h1>NUESTROS PERFUMES</h1>
     <div class="Formulario-P" id="Opciones-Productos">
       <div class="Tabs-Usuario" id="Secciones-Productos">
-        <label for="Registrate" id="label-Productos"><h3>SECCIÓN DE CABALLEROS</h3></label>
-        <label for="Login" id="label-Productos"><h3>SECCIÓN DE DAMAS</h3></label>
+        <label for="Registrate" id="label-Productos">
+          <h3>SECCIÓN DE CABALLEROS</h3>
+        </label>
+        <label for="Login" id="label-Productos">
+          <h3>SECCIÓN DE DAMAS</h3>
+        </label>
       </div>
-
+      <div class="content">
+        <input type="radio" name="radio" id="Registrate" checked>
+        <div class="Tabs-1">
+          <table class="Tabla-Perfumes" id="Tabla-Hombres">
+            <tr class="Seccion-Perfumes" id="Perfumes-Hombres">
+              <td class="Producto" id="Producto_1">
+                <h1 class="Titulo" id="Titulo_1">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_1" src="img/Catalogo-1.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_1">
+                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
+                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
+                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                </p>
+              </td>
+              <td class="Producto" id="Producto_2">
+                <h1 class="Titulo" id="Titulo_2">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_2" src="img/Catalogo-1.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_2">
+                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
+                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
+                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                </p>
+              </td>
+              <td class="Producto" id="Producto_3">
+                <h1 class="Titulo" id="Titulo_3">STRONGER WITH YOU DE GIORGIO ARMANI</h1>
+                <img class="Img-Producto" id="Img-Producto_3" src="img/Catalogo-1.png">
+                <h1 class="Clasificacion">Calificación <br> ★ ★ ★ ★ ★</h1>
+                <p class="Descripcion" id="Descripcion_3">
+                  Stronger with you se inspira en un hombre que vive en el presente, moldeado por la energía de la
+                  modernidad. Es impredecible y original, al igual que el acorde picante de la fragancia:
+                  una mezcla de cardamomo, pimienta rosa y hojas de violeta.
+                </p>
+              </td>
+            </tr>
+            <tr class="Perfumes-Hombres">
+              <td class="Perfumes" id="Perfumes_4">
+              </td>
+              <td class="Perfumes" id="Perfumes_5"> </td>
+              <td class="Perfumes" id="Perfumes_6"> </td>
+            </tr>
+          </table>
+        </div>
+        <input type="radio" name="radio" id="Login" checked>
+        <div class="Tabs-2">
+          <h1>tabla_2</h1>
+        </div>
+      </div>
     </div>
-    </div>
+  </div>
   </div>
 </body>
 
